--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Project Lamp</h1>
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Project Lamp</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+  </head>
+  <body>
+    <h1>Project Lamp</h1>
+  </body>
+</html>
