--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
   </head>
   <body>
     <h1>Project Lamp</h1>
-    <h2>Hardware</h2>
+    <h4>Hardware</h4>
     <ul>
       <li>https://workspace.circuitmaker.com/Projects/Details/Wouter-Devinck/LedBoard</li>
       <li>https://workspace.circuitmaker.com/Projects/Details/Wouter-Devinck/LampController</li>
       <li>https://github.com/wouterdevinck/lamp-fpga/</li>
     </ul>
-    <h2>Software</h2>
+    <h4>Software</h4>
     <ul>
       <li>https://github.com/wouterdevinck/lamp-core/</li>
       <li>https://github.com/wouterdevinck/lamp-firmware/</li>
       <li>https://github.com/wouterdevinck/lamp-simulator/</li>
     </ul>
-    <h2>CI/CD</h2>
+    <h4>CI/CD</h4>
     <ul>
       <li>https://travis-ci.org/wouterdevinck/lamp-firmware/</li>
       <li>https://travis-ci.org/wouterdevinck/lamp-fpga/</li>
       <li>https://ci.appveyor.com/project/wouterdevinck/lamp-simulator/</li>
     </ul>
-    <h2>3D models</h2>
+    <h4>3D models</h4>
     <ul>
       <li>http://a360.co/2miYawg</li>
     </ul>
-    <h2>Documentation<h2>
+    <h4>Documentation</h4>
     <ul>
       <li>https://github.com/wouterdevinck/lamp-home/</li>
       <li>http://lamp.wouterdevinck.be/</li>
     </ul>
-    <h2>Todo list<h2>
+    <h4>Todo list</h4>
     <ul>
       <li>https://trello.com/b/MGPEvZd2/lamp</li>
     </ul>
