--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
     <h1>Project Lamp</h1>
     <h4>Hardware</h4>
     <ul>
-      <li>https://workspace.circuitmaker.com/Projects/Details/Wouter-Devinck/LedBoard</li>
-      <li>https://workspace.circuitmaker.com/Projects/Details/Wouter-Devinck/LampController</li>
-      <li>https://github.com/wouterdevinck/lamp-fpga/</li>
+      <li><a href="https://workspace.circuitmaker.com/Projects/Details/Wouter-Devinck/LedBoard">https://workspace.circuitmaker.com/Projects/Details/Wouter-Devinck/LedBoard</a></li>
+      <li><a href="https://workspace.circuitmaker.com/Projects/Details/Wouter-Devinck/LampController">https://workspace.circuitmaker.com/Projects/Details/Wouter-Devinck/LampController</a></li>
+      <li><a href="https://github.com/wouterdevinck/lamp-fpga/">https://github.com/wouterdevinck/lamp-fpga/</a></li>
     </ul>
     <h4>Software</h4>
     <ul>
-      <li>https://github.com/wouterdevinck/lamp-core/</li>
-      <li>https://github.com/wouterdevinck/lamp-firmware/</li>
-      <li>https://github.com/wouterdevinck/lamp-simulator/</li>
+      <li><a href="https://github.com/wouterdevinck/lamp-core/">https://github.com/wouterdevinck/lamp-core/</a></li>
+      <li><a href="https://github.com/wouterdevinck/lamp-firmware/">https://github.com/wouterdevinck/lamp-firmware/</a></li>
+      <li><a href="https://github.com/wouterdevinck/lamp-simulator/">https://github.com/wouterdevinck/lamp-simulator/</a></li>
     </ul>
     <h4>CI/CD</h4>
     <ul>
-      <li>https://travis-ci.org/wouterdevinck/lamp-firmware/</li>
-      <li>https://travis-ci.org/wouterdevinck/lamp-fpga/</li>
-      <li>https://ci.appveyor.com/project/wouterdevinck/lamp-simulator/</li>
+      <li><a href="https://travis-ci.org/wouterdevinck/lamp-firmware/">https://travis-ci.org/wouterdevinck/lamp-firmware/</a></li>
+      <li><a href="https://travis-ci.org/wouterdevinck/lamp-fpga/">https://travis-ci.org/wouterdevinck/lamp-fpga/</a></li>
+      <li><a href="https://ci.appveyor.com/project/wouterdevinck/lamp-simulator/">https://ci.appveyor.com/project/wouterdevinck/lamp-simulator/</a></li>
     </ul>
     <h4>3D models</h4>
     <ul>
-      <li>http://a360.co/2miYawg</li>
+      <li><a href="http://a360.co/2miYawg">http://a360.co/2miYawg</a></li>
     </ul>
     <h4>Documentation</h4>
     <ul>
-      <li>https://github.com/wouterdevinck/lamp-home/</li>
-      <li>http://lamp.wouterdevinck.be/</li>
+      <li><a href="https://github.com/wouterdevinck/lamp-home/">https://github.com/wouterdevinck/lamp-home/</a></li>
+      <li><a href="http://lamp.wouterdevinck.be/">http://lamp.wouterdevinck.be/</a></li>
     </ul>
     <h4>Todo list</h4>
     <ul>
-      <li>https://trello.com/b/MGPEvZd2/lamp</li>
+      <li><a href="https://trello.com/b/MGPEvZd2/lamp">https://trello.com/b/MGPEvZd2/lamp</a></li>
     </ul>
   </body>
 </html>
