--- a/index.html
+++ b/index.html
@@ -16,6 +16,32 @@
   </head>
   <body>
     <h1>Project Lamp</h1>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://s3.amazonaws.com/CircuitMaker-prod/ProjectMetadata/99FD852F-911A-4B6C-9600-E1BB9DB8475C/Images/3527b840-2101-4071-b7c5-89f83dc591abView" alt="LED board">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="..." alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
     <h4>Hardware</h4>
     <ul>
       <li><a href="https://workspace.circuitmaker.com/Projects/Details/Wouter-Devinck/LedBoard">https://workspace.circuitmaker.com/Projects/Details/Wouter-Devinck/LedBoard</a></li>
