--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       body {
         margin: 2rem;
       }
-      h1 {
+      h1, .carousel {
         margin-bottom: 1em;
       }
     </style>
@@ -24,13 +24,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://s3.amazonaws.com/CircuitMaker-prod/ProjectMetadata/99FD852F-911A-4B6C-9600-E1BB9DB8475C/Images/3527b840-2101-4071-b7c5-89f83dc591abView" alt="LED board">
+      <img class="d-block w-50" src="https://s3.amazonaws.com/CircuitMaker-prod/ProjectMetadata/99FD852F-911A-4B6C-9600-E1BB9DB8475C/Images/3527b840-2101-4071-b7c5-89f83dc591abView" alt="LED board">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://raas-render-prod.s3.amazonaws.com/XDBZP2ZC9C8L/bb3cf597-c9c6-4057-9dd3-1162e61d81f7/gallery.0.jpg?AWSAccessKeyId=AKIAI2E3KVRFLGAFLOPA&Expires=1515609957&response-cache-control=public%2C%20max-age%3D86400&response-expires=Wed%2C%2010%20Jan%202018%2018%3A45%3A57%20GMT&Signature=slaXKBOa156yjIEGRdGalqbd06U%3D" alt="Second slide">
+      <img class="d-block w-50" src="https://raas-render-prod.s3.amazonaws.com/XDBZP2ZC9C8L/bb3cf597-c9c6-4057-9dd3-1162e61d81f7/gallery.0.jpg?AWSAccessKeyId=AKIAI2E3KVRFLGAFLOPA&Expires=1515609957&response-cache-control=public%2C%20max-age%3D86400&response-expires=Wed%2C%2010%20Jan%202018%2018%3A45%3A57%20GMT&Signature=slaXKBOa156yjIEGRdGalqbd06U%3D" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://raas-render-prod.s3.amazonaws.com/XDBZP2ZC9C8L/09b2bf2c-363f-4c06-8dda-efba3f4c6f13/gallery.0.jpg?AWSAccessKeyId=AKIAI2E3KVRFLGAFLOPA&Expires=1515609957&response-cache-control=public%2C%20max-age%3D86400&response-expires=Wed%2C%2010%20Jan%202018%2018%3A45%3A57%20GMT&Signature=p0uTEvsiKzOgG3MwNuKAFPc0IuA%3D" alt="Third slide">
+      <img class="d-block w-50" src="https://raas-render-prod.s3.amazonaws.com/XDBZP2ZC9C8L/09b2bf2c-363f-4c06-8dda-efba3f4c6f13/gallery.0.jpg?AWSAccessKeyId=AKIAI2E3KVRFLGAFLOPA&Expires=1515609957&response-cache-control=public%2C%20max-age%3D86400&response-expires=Wed%2C%2010%20Jan%202018%2018%3A45%3A57%20GMT&Signature=p0uTEvsiKzOgG3MwNuKAFPc0IuA%3D" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -73,5 +73,8 @@
     <ul>
       <li><a href="https://trello.com/b/MGPEvZd2/lamp">https://trello.com/b/MGPEvZd2/lamp</a></li>
     </ul>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
   </body>
 </html>
