--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
       body {
         margin: 2rem;
       }
-      h1, .carousel {
-        margin-bottom: 1em;
+      h1, #pictures {
+        margin-bottom: 2rem;
+      }
+      #pictures {
+        width: 600px;
       }
     </style>
   </head>
   <body>
     <h1>Project Lamp</h1>
+<div class="container" id="pictures">
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -24,13 +28,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-50" src="https://s3.amazonaws.com/CircuitMaker-prod/ProjectMetadata/99FD852F-911A-4B6C-9600-E1BB9DB8475C/Images/3527b840-2101-4071-b7c5-89f83dc591abView" alt="LED board">
+      <img class="d-block w-100" src="https://s3.amazonaws.com/CircuitMaker-prod/ProjectMetadata/99FD852F-911A-4B6C-9600-E1BB9DB8475C/Images/3527b840-2101-4071-b7c5-89f83dc591abView" alt="LED board">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-50" src="https://raas-render-prod.s3.amazonaws.com/XDBZP2ZC9C8L/bb3cf597-c9c6-4057-9dd3-1162e61d81f7/gallery.0.jpg?AWSAccessKeyId=AKIAI2E3KVRFLGAFLOPA&Expires=1515609957&response-cache-control=public%2C%20max-age%3D86400&response-expires=Wed%2C%2010%20Jan%202018%2018%3A45%3A57%20GMT&Signature=slaXKBOa156yjIEGRdGalqbd06U%3D" alt="Second slide">
+      <img class="d-block w-100" src="https://raas-render-prod.s3.amazonaws.com/XDBZP2ZC9C8L/bb3cf597-c9c6-4057-9dd3-1162e61d81f7/gallery.0.jpg?AWSAccessKeyId=AKIAI2E3KVRFLGAFLOPA&Expires=1515609957&response-cache-control=public%2C%20max-age%3D86400&response-expires=Wed%2C%2010%20Jan%202018%2018%3A45%3A57%20GMT&Signature=slaXKBOa156yjIEGRdGalqbd06U%3D" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-50" src="https://raas-render-prod.s3.amazonaws.com/XDBZP2ZC9C8L/09b2bf2c-363f-4c06-8dda-efba3f4c6f13/gallery.0.jpg?AWSAccessKeyId=AKIAI2E3KVRFLGAFLOPA&Expires=1515609957&response-cache-control=public%2C%20max-age%3D86400&response-expires=Wed%2C%2010%20Jan%202018%2018%3A45%3A57%20GMT&Signature=p0uTEvsiKzOgG3MwNuKAFPc0IuA%3D" alt="Third slide">
+      <img class="d-block w-100" src="https://raas-render-prod.s3.amazonaws.com/XDBZP2ZC9C8L/09b2bf2c-363f-4c06-8dda-efba3f4c6f13/gallery.0.jpg?AWSAccessKeyId=AKIAI2E3KVRFLGAFLOPA&Expires=1515609957&response-cache-control=public%2C%20max-age%3D86400&response-expires=Wed%2C%2010%20Jan%202018%2018%3A45%3A57%20GMT&Signature=p0uTEvsiKzOgG3MwNuKAFPc0IuA%3D" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -41,6 +45,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+</div>
 </div>
     <h4>Hardware</h4>
     <ul>
