--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         margin-bottom: 2rem;
       }
       #pictures {
-        width: 600px;
+        width: 50%;
       }
     </style>
   </head>
