Added build fpga container

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
       <li><a href="https://travis-ci.org/wouterdevinck/lamp-firmware/">https://travis-ci.org/wouterdevinck/lamp-firmware/</a></li>
       <li><a href="https://travis-ci.org/wouterdevinck/lamp-fpga/">https://travis-ci.org/wouterdevinck/lamp-fpga/</a></li>
       <li><a href="https://ci.appveyor.com/project/wouterdevinck/lamp-simulator/">https://ci.appveyor.com/project/wouterdevinck/lamp-simulator/</a></li>
+      <li><a href="https://hub.docker.com/r/wouterdevinck/lamp-fpga-build/">https://hub.docker.com/r/wouterdevinck/lamp-fpga-build/</a></li>
     </ul>
     <h4>3D models</h4>
     <ul>
