--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <h4>Docker images</h4>
     <ul>
       <li><a href="https://hub.docker.com/r/wouterdevinck/lamp-fpga-build/">https://hub.docker.com/r/wouterdevinck/lamp-fpga-build/</a></li>
+      <li><a href="https://hub.docker.com/r/wouterdevinck/lamp-firmware-build/">https://hub.docker.com/r/wouterdevinck/lamp-firmware-build/</a></li>
     </ul>
     <h4>3D models</h4>
     <ul>
