--- a/index.html
+++ b/index.html
@@ -79,8 +79,16 @@
     </ul>
     <h4>Docker images</h4>
     <ul>
-      <li><a href="https://hub.docker.com/r/wouterdevinck/lamp-fpga-build/">https://hub.docker.com/r/wouterdevinck/lamp-fpga-build/</a></li>
-      <li><a href="https://hub.docker.com/r/wouterdevinck/lamp-firmware-build/">https://hub.docker.com/r/wouterdevinck/lamp-firmware-build/</a></li>
+      <li>
+        <a href="https://hub.docker.com/r/wouterdevinck/lamp-firmware-build/"><img src="https://img.shields.io/docker/build/wouterdevinck/lamp-firmware-build.svg?label=docker+image" /></a>
+        <strong>ESP32 build tools</strong>
+        <a href="https://hub.docker.com/r/wouterdevinck/lamp-firmware-build/">https://hub.docker.com/r/wouterdevinck/lamp-firmware-build/</a>
+      </li>
+      <li>
+        <a href="https://hub.docker.com/r/wouterdevinck/lamp-fpga-build/"><img src="https://img.shields.io/docker/build/wouterdevinck/lamp-fpga-build.svg?label=docker+image" /></a>
+        <strong>FPGA build tools</strong>
+        <a href="https://hub.docker.com/r/wouterdevinck/lamp-fpga-build/">https://hub.docker.com/r/wouterdevinck/lamp-fpga-build/</a>
+      </li>
     </ul>
     <h4>3D models</h4>
     <ul>
